--- a/my-cv/components/Header/style.module.scss
+++ b/my-cv/components/Header/style.module.scss
@@ -51,11 +51,9 @@
             transition: all 0.6s;
 
             &:hover {
-                // text-decoration: underline;
                 transform: scale(1.15);
             }
         }
-
 
         .active {
             top: 0;
@@ -70,6 +68,12 @@
         width: 50px;
         height: 50px;
         transition: 0.2s;
+
+        &:hover {
+            cursor: pointer;
+            background-color: rgba(247, 242, 242, 0.092);
+            border-radius: 10px;
+        }
     }
 
     .close {
@@ -79,6 +83,12 @@
         width: 50px;
         height: 50px;
         transition: 0.2s;
+
+        &:hover {
+            cursor: pointer;
+            background-color: rgba(247, 242, 242, 0.092);
+            border-radius: 10px;
+        }
     }
 
 }
