--- a/my-cv/styles/Home.module.scss
+++ b/my-cv/styles/Home.module.scss
@@ -1,7 +1,7 @@
 .wrapper {
     background-color: black;
     width: 620px;
-    height: 100vh;
+    // height: 100vh;
     padding: 0 50px;
     display: flex;
     flex-direction: column;
@@ -66,14 +66,139 @@
     }
 
     .expH2 {
+        margin: 0;
         color: var(--White, #F5F8FF);
         font: 900 18px Poppins;
-        margin: 0;
         padding-left: 24px;
+
+        text-transform: uppercase;
     }
 
     .sectionRowTwo {
         border-radius: 24px;
         background: var(--balck, radial-gradient(205.3% 154.51% at 91.33% -10.25%, #212225 0%, #1F2025 100%));
+        padding: 24px;
+
+        p {
+            margin: 0;
+            color: var(--White, #F5F8FF);
+            font: 500 16px Poppins;
+            letter-spacing: 0.8px;
+        }
+
+        .two {
+            font-size: 10px;
+            line-height: 20px;
+            letter-spacing: 0.5px;
+        }
+
+        .three {
+            font-size: 10px;
+            line-height: 20px;
+            letter-spacing: 0.5px;
+            opacity: 0.64;
+        }
+
+        .four {
+            color: #FFF;
+
+            font-size: 10px;
+            font-weight: 300;
+            letter-spacing: 0.2px;
+            opacity: 0.84;
+        }
+    }
+
+    .sectionRowThree {
+        padding: 24px;
+        border-radius: 24px;
+        background: var(--balck, radial-gradient(205.3% 154.51% at 91.33% -10.25%, #212225 0%, #1F2025 100%));
+
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        height: 60px;
+
+        p {
+            margin: 0;
+            color: var(--White, #F5F8FF);
+            font: 400 12px Poppins;
+            letter-spacing: 1.2px;
+            opacity: 0.85;
+        }
+    }
+
+    .sectionRowFour {
+        display: flex;
+        gap: 16px;
+
+        .wrapper {
+            display: flex;
+            flex-direction: row;
+            align-items: flex-start;
+
+            padding: 24px;
+            border-radius: 24px;
+            background: var(--balck, radial-gradient(205.3% 154.51% at 91.33% -10.25%, #212225 0%, #1F2025 100%));
+
+            p {
+                margin: 0;
+                color: var(--White, #F5F8FF);
+                font: 400 12px Poppins;
+                line-height: 190%;
+                letter-spacing: 1.2px;
+
+                opacity: 0.85;
+            }
+        }
+
+
+    }
+
+    .sectionRowFive {
+        display: flex;
+        gap: 24px;
+        padding: 24px;
+        border-radius: 24px;
+        background: var(--balck, radial-gradient(205.3% 154.51% at 91.33% -10.25%, #212225 0%, #1F2025 100%));
+
+        .imgQR {
+            background-image: url('../public/icons8-github-64.svg');
+            background-size: contain;
+            background-size: contain;
+            width: 74px;
+            height: 74px;
+        }
+
+        .infoLinks {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+
+            h1 {
+                margin: 0;
+                color: var(--White, #F5F8FF);
+                font: 600 14px Poppins;
+                letter-spacing: 0.14px;
+                text-transform: uppercase;
+            }
+
+            a {
+                text-decoration: none;
+            }
+
+            p {
+                margin: 0;
+                color: var(--gray, #C2C2C2);
+                font: 300 12px Poppins;
+                letter-spacing: 0.6px;
+
+                &:hover {
+                    cursor: pointer;
+                    text-decoration: underline;
+                }
+            }
+        }
     }
 }
